--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 			</div>
 		</div>
 	</div>
-	<audio autoplay>
-		<source src="./audio/audio.mpeg" type="audio/mpeg">
+	<audio autoplay="autoplay" loop="true" playsinline>
+		<source src="audio/audio.mpeg" type="audio/mpeg">
 	</audio>
 </body>
 </html>
